// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icons.ts > should render properly > IconArrowDown 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="-1 -4 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m1 1 5.326 5.7a.909.909 0 0 0 1.348 0L13 1"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconCheck 1`] = `
<div>
  <svg
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="-1 -3 18 18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 5.917 5.724 10.5 15 1.5"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="3"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconClose 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="-1 -1 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconEdit 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="0 0 21 21"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.418 17.861 1 20l2.139-6.418m4.279 4.279 10.7-10.7a3.027 3.027 0 0 0-2.14-5.165c-.802 0-1.571.319-2.139.886l-10.7 10.7m4.279 4.279-4.279-4.279m2.139 2.14 7.844-7.844m-1.426-2.853 4.279 4.279"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconError 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m13 7-6 6m0-6 6 6m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconInfo 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 9h2v5m-2 0h4M9.408 5.5h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconPause 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="0 0 12 18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M1 1.8c0-.442.32-.8.714-.8h1.429c.394 0 .714.358.714.8v14.4c0 .442-.32.8-.714.8H1.714a.678.678 0 0 1-.505-.234A.851.851 0 0 1 1 16.2V1.8Zm7.143 0c0-.442.32-.8.714-.8h1.429c.19 0 .37.084.505.234.134.15.209.354.209.566v14.4c0 .442-.32.8-.714.8H8.857c-.394 0-.714-.358-.714-.8V1.8Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconPlay 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="0 0 16 18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 1.984v14.032a1 1 0 0 0 1.506.845l12.006-7.016a.974.974 0 0 0 0-1.69L2.506 1.139A1 1 0 0 0 1 1.984Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconPlus 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="-0.5 -0.5 19 19"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 1v16M1 9h16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2.5"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconSuccess 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m7 10 2 2 4-4m6 2a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconVerticalDots 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="currentColor"
    viewBox="0 0 4 15"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
    />
  </svg>
</div>
`;

exports[`Icons.ts > should render properly > IconWarning 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="_icon_2be8fc _primary_2be8fc"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;
